# ntu-austronesian-glossing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
glosstools/: __init__.py  add.py  gloss_adder.py  gloss_replacer.py  sub.py
glosstools/base/: __init__.py  base.py
glosstools/contexts/: __init__.py  docx.py  read.py  txt.py  write.py
glosstools/contexts/base/: __init__.py  reader.py  writer.py
glosstools/typings/: __init__.py  file_path.py
glosstools/util/: __init__.py  gloss_reader.py  gloss_saver.py
